--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,5 +1,5 @@
 RewriteEngine On
-RewriteBase /eysphp/public/
+RewriteBase /public/
 
 # Si la solicitud no apunta a un archivo o directorio real, redirigirla a index.php
 RewriteCond %{REQUEST_FILENAME} !-f
